--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
             </div>
         </div>
 		<footer class="game-container">
-			<p class="text-center"> This card sorting game was developed by Laura Pardo with the assitance of <a href="https://clade.ai" target="_blank">Claude AI by Anthropic </a> for Creative Business students at Breda University of Applied Sciences</p>
+			<div class="double-container px-2">
+				<p class="text-center"> This card sorting game was developed by Laura Pardo with the assitance of <a href="https://clade.ai" target="_blank">Claude AI by Anthropic </a> for Creative Business students at Breda University of Applied Sciences</p>
+			</div>
 		</footer>
     </div>
 
