--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 </div>
             </div>
         </div>
-		<footer class="game-container">
-			<div class="double-container px-2">
+		<footer class="game-container pt-3 pb-1 px-1">
+			<div class="double-container">
 				<p class="text-center"> This card sorting game was developed by Laura Pardo with the assitance of <a href="https://clade.ai" target="_blank">Claude AI by Anthropic </a> for Creative Business students at Breda University of Applied Sciences</p>
 			</div>
 		</footer>
